fix bug with skills react icon on mobile

--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -159,7 +159,7 @@
     .skills {
         grid-column: 1 / span 1;
         grid-row: 3 / span 1;
-        max-height: 200px;
+        max-height: 250px;
 
     }
     .bio {
